# hermes-canvas-dashboard

./: .env.example  .gitignore  CANVAS_API.md  README.md  ecosystem.config.cjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  tsconfig.node.json
agent_service/: __init__.py  __main__.py  agent.py  app.py  canvas_client.py  canvas_context.py  canvas_tools.py  config.py  models.py  persistence.py  repository.py
docs/: PRD.md  WHITE_PAPER.md
plugins/canvas-dashboard/: __init__.py  plugin.yaml  schemas.py  test_tools.py  tools.py
scripts/: canvas_dashboard_tool.py  install-canvas-dashboard-plugin.sh  pm2Config.test.ts  serve-dist.mjs  test_canvas_dashboard_tool.py  test_install_canvas_dashboard_plugin.py
scripts/linux/: install-systemd-services.sh  linuxServiceArtifacts.test.ts  uninstall-systemd-services.sh
server/: index.ts
server/canvas/: canvasFileStore.test.ts  canvasFileStore.ts  canvasGateway.integration.test.ts  canvasGateway.test.ts  canvasGateway.ts  headlessCanvasExecutor.test.ts  headlessCanvasExecutor.ts  headlessExcalidrawApi.test.ts  headlessExcalidrawApi.ts  hermesCanvasClient.test.ts  hermesCanvasClient.ts  hermesCanvasTool.ts  roomManager.ts  tldrawHeadlessExecutor.test.ts  tldrawHeadlessExecutor.ts  tldrawSyncServer.ts  (+1 more)
src/: App.test.tsx  App.tsx  brandingMetadata.test.ts  main.tsx  setupTests.ts  styles.css  vite-env.d.ts
systemd/: hermes-canvas-app-dev.service  hermes-canvas-app.service  hermes-canvas-server-dev.service  hermes-canvas-server.service  hermes-canvas.env.example
(+153 files in other folders)
