[project]
name = "hermes-canvas-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20,<1",
  "fastapi>=0.115,<1",
  "langchain>=1.1,<2",
  "langchain-openai>=1.0,<2",
  "langgraph-checkpoint-sqlite>=3,<4",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "uvicorn[standard]>=0.34,<1",
  "websockets>=14,<17",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

